--- a/app/templates/mainPart/assign_lecturer.html
+++ b/app/templates/mainPart/assign_lecturer.html
@@ -25,6 +25,14 @@
         <!-- One div for table switching page -->
 
         <div class="menu-container">
+            <div class="tab-nav">
+                <a href="{{ url_for('home_page')}}" class="tab-link active" data-tab="home">Home</a>
+                <a href="{{ url_for('upload_file')}}" class="tab-link" data-tab="upload">Upload File</a>
+                <a href="{{ url_for('exam_input')}}" class="tab-link" data-tab="exam">Input Exam Details</a>
+                <a href="{{ url_for('auto_generate')}}" class="tab-link" data-tab="generate">Generate Exam Schedule</a>
+                <a href="{{ url_for('assign_lecturer')}}" class="tab-link" data-tab="settings">Settings</a>
+            </div>
+            
             <div class="menu-grid">
                 <!-- Row 1 First Fesatures to upload merge schedule files--> 
                 <div class="menu-section">
