--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -29,6 +29,7 @@
             <div class="tab-nav">
                 <a href="{{ url_for('home_page')}}" class="tab-link active" data-tab="home">Home</a>
                 <a href="{{ url_for('upload_file')}}" class="tab-link" data-tab="upload">Upload File</a>
+                <a class="tab-link" data-tab="upload">Upload File</a>
                 <a href="{{ url_for('exam_input')}}" class="tab-link" data-tab="exam">Input Exam Details</a>
                 <a href="{{ url_for('auto_generate')}}" class="tab-link" data-tab="generate">Generate Exam Schedule</a>
                 <a href="{{ url_for('assign_lecturer')}}" class="tab-link" data-tab="settings">Settings</a>
