--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -28,7 +28,7 @@
             <!-- Tab navigation -->
             <div class="tab-nav">
                 <a href="{{ url_for('home_page')}}" class="tab-link active" data-tab="home">Home</a>
-                <a href="{{ url_for('upload_file')}}" class="tab-link" data-tab="upload">Upload File</a>
+                <a href="{{ url_for('upload_file')}}">Upload File</a>
                 <a class="tab-link" data-tab="upload">Upload File</a>
                 <a href="{{ url_for('exam_input')}}" class="tab-link" data-tab="exam">Input Exam Details</a>
                 <a href="{{ url_for('auto_generate')}}" class="tab-link" data-tab="generate">Generate Exam Schedule</a>
@@ -38,7 +38,7 @@
             <!-- Tab content container -->
             <div class="tab-content">
                 <div id="home" class="tab-pane active">
-                    
+
                 </div>
                 
                 <!-- Upload File content  -->
