--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -24,16 +24,19 @@
         <h1 style="text-align: center;">Welcome to Exam Invigilation Management System</h1>
         <br>
 
+        <!-- Tab navigation -->
         <div class="menu-container">
             <!-- Tab navigation -->
             <div class="tab-nav">
                 <a href="{{ url_for('home_page')}}" class="tab-link active" data-tab="home">Home</a>
                 <a href="{{ url_for('upload_file')}}" class="tab-link" data-tab="upload">Upload File</a>
-                <a class="tab-link" data-tab="upload">Upload File</a>
                 <a href="{{ url_for('exam_input')}}" class="tab-link" data-tab="exam">Input Exam Details</a>
                 <a href="{{ url_for('auto_generate')}}" class="tab-link" data-tab="generate">Generate Exam Schedule</a>
                 <a href="{{ url_for('assign_lecturer')}}" class="tab-link" data-tab="settings">Settings</a>
             </div>
+            
+            <!-- Rest of your HTML remains the same -->
+        </div>
             
             <!-- Tab content container -->
             <div class="tab-content">
