--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -27,6 +27,7 @@
         <!-- Tab navigation -->
         <div class="menu-container">
             <!-- Tab navigation -->
+            <!--
             <div class="tab-nav">
                 <a href="{{ url_for('home_page')}}" class="tab-link active" data-tab="home">Home</a>
                 <a href="{{ url_for('upload_file')}}" class="tab-link" data-tab="upload">Upload File</a>
@@ -34,6 +35,15 @@
                 <a href="{{ url_for('auto_generate')}}" class="tab-link" data-tab="generate">Generate Exam Schedule</a>
                 <a href="{{ url_for('assign_lecturer')}}" class="tab-link" data-tab="settings">Settings</a>
             </div>
+            -->
+            <div class="tab-nav">
+                <a href="{{ url_for('home_page') }}" class="tab-link">Home</a>
+                <a href="{{ url_for('upload_file') }}" class="tab-link">Upload File</a>
+                <a href="{{ url_for('exam_input') }}" class="tab-link">Input Exam Details</a>
+                <a href="{{ url_for('auto_generate') }}" class="tab-link">Generate Exam Schedule</a>
+                <a href="{{ url_for('assign_lecturer') }}" class="tab-link">Settings</a>
+            </div>
+
             
             <!-- Rest of your HTML remains the same -->
         </div>
