--- a/app/templates/mainPart/generate_schedule.html
+++ b/app/templates/mainPart/generate_schedule.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "base.html" %}
+{% extends "mainPart/base.html" %}
 {% block title %}Upload File{% endblock %}
 {% block content %}
     <div class="menu-grid">
