--- a/app/templates/deanPart/deanResetPassword.html
+++ b/app/templates/deanPart/deanResetPassword.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ResetPassword_page</title>
+    <title>Dean ResetPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
