--- a/app/templates/lecturerPart/lecturerLogin.html
+++ b/app/templates/lecturerPart/lecturerLogin.html
@@ -1,6 +1,6 @@
 
 <head>
-    <title>Login Page</title>
+    <title>Lecturer Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
