--- a/app/templates/lecturerPart/lecturerForgotPassword.html
+++ b/app/templates/lecturerPart/lecturerForgotPassword.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ForgotPassword_page</title>
+    <title>Lecturer ForgotPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
