--- a/app/static/css/lecturer/lecturer.css
+++ b/app/static/css/lecturer/lecturer.css
@@ -9,7 +9,7 @@ body {
 }
 
 .heading {
-    background: url("../pic/INTI_LOGO.png") center no-repeat;
+    background: url("../../pic/INTI_LOGO.png") center no-repeat;
     height: 90px;
     width: 100%;
 }
