--- a/app/templates/adminPart/adminForgotPassword.html
+++ b/app/templates/adminPart/adminForgotPassword.html
@@ -4,7 +4,7 @@
     <title>Admin ForgotPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin/admin.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
 </head>
 
 <body>
