--- a/app/templates/deanPart/deanBase.html
+++ b/app/templates/deanPart/deanBase.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dean/dean.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dean/deanHome.css') }}">
     <!-- Shared header/navigation -->
     <div class= "header-container">
         <div class="heading"></div>
