--- a/app/templates/deanPart/deanRegister.html
+++ b/app/templates/deanPart/deanRegister.html
@@ -4,7 +4,7 @@
     <title>Dean Register</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dean/dean.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
