--- a/app/templates/lecturerPart/lecturerResetPassword.html
+++ b/app/templates/lecturerPart/lecturerResetPassword.html
@@ -5,7 +5,7 @@
     <title>Lecturer ResetPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Lecturer/Lecturer.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
