--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -5,6 +5,7 @@
     <h2>Profile</h2>
     <form method="post">
         <div class="profile-frame">
+            <br>
             <label>Full Name as per IC</label>
             <input type="text" name="username" value="{{ admin_name }}" readonly><br>
             
@@ -14,14 +15,12 @@
             <label>Email Address</label>
             <input type="text" name="email" value="{{ admin_email }}" readonly><br>
         
-
-        
             <label>Contact Number</label>
-            <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
+            <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>  
 
             <div class="password-container">
                 <label>Password</label>
-                <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
+                <input type="password" name="password1" value="{{ admin_ppassword1_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
@@ -29,13 +28,12 @@
 
             <div class="password-container">
                 <label> Confirm Password</label>
-                <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
+                <input type="password" name="password2" value="{{ admin_password2_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
             </div>
             
-
             <br><br>
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
