--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -1,6 +1,86 @@
 {% extends "lecturerPart/lecturerBase.html" %}
 {% block title %}Lecturer Profile{% endblock %}
 {% block content %}
+<div class="menu-section">
+    <h2>Profile</h2>
+    <form method="post">
+        <div class="profile-frame">
+            <br>
+            <label>Full Name as per IC</label>
+            <input type="text" name="username" value="{{ lecturer_name }}" readonly><br>
+            
+            <label>Staff ID</label>
+            <input type="text" name="userid" value="{{ lecturer_id }}" readonly><br>
+
+            <label>Email Address</label>
+            <input type="text" name="email" value="{{ lecturer_email }}" readonly><br>
+            
+            <label>Department</label>
+            <input type="text" name="department", value="{{ lecturer_departmen_text}}" readonly><br>
+        
+            <label>Contact Number</label>
+            <input type="tel" name="contact" value="{{ lecturer_contact_text }}"><br> 
+            
+            <div class="password-container">
+                <label>Password</label>
+                <input type="password" name="password1" value="{{ lecturer_password1_text }}">
+                <button type="button" class="toggle-password-btn">
+                    <i class="fas fa-eye"></i>
+                </button>
+            </div><br>
+
+            <div class="password-container">
+                <label> Confirm Password</label>
+                <input type="password" name="password2" value="{{ lecturer_password2_text }}">
+                <button type="button" class="toggle-password-btn">
+                    <i class="fas fa-eye"></i>
+                </button>
+            </div>
+            
+            <br><br>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            <br>
+        </div>
+        
+        <div class="button-wrapper">
+                <button type="submit">Submit</button>
+        </div>
+    </form>
+</div>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="menu-section">
     <div class="main-frame">
