--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -48,6 +48,10 @@
                     <i class="fas fa-chalkboard-teacher"></i>
                     <span>Manage Lecturer</span>
                 </a>
+                <a href="{{ url_for('admin_viewReport') }}" class="tab-link {% if active_tab == 'admin_viewReporttab' %}active{% endif %}">
+                    <i class="fas fa-book"></i>
+                    <span>View Report</span>
+                </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
