--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -88,6 +88,21 @@
             </li>
         </div>
     </div>
+
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
+        <!-- Row 1 First Fesatures to upload merge schedule files--> 
+        <div class="menu-section">
+            <!--   <h2>Upload File</h2><br>  -->
+            <a href="{{ url_for('admin_viewReport')}}" style="text-decoration: none;"><h2>View Inviglation Report</h2></a>
+            <li class="submenu">
+                <strong>  Purpose:</strong>
+                <ul>    
+                    <li>Upload merged lecturer schedule files</li>
+                    <li>Access and review combined lecturer timetables</li>
+                </ul>
+            </li>
+        </div>
+    </div>
 {% endblock %}
 
 <!-- 
