--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -15,9 +15,9 @@
                     <th>No</th>
                     <th>Id</th>
                     <th>Name</th>
-                    <th>Department</th>
-                    <th>Role Based</th>
                     <th>Email</th>
+                    <th>Role Based</th>
+                    <th>Department</th>
                     <th>Contact</th>
                     <th>Status</th>
                 </tr>
@@ -28,8 +28,8 @@
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <td>{{ row.userId }}</td>
                     <td>{{ row.userName }}</td>
+                    <td>{{ row.userEmail }}</td>
                     <td>{{ row.userDepartment }}</td>
-
                     <!-- Role Name based on userLevel -->
                     <td>
                         {% if row.userLevel == 1 %}
@@ -44,13 +44,10 @@
                             Unknown
                         {% endif %}
                     </td>
-
-                    <td>{{ row.userEmail }}</td>
                     <td>{{ row.userContact }}</td>
-
                     <!-- User status: Activated / Deactivated -->
                     <td>
-                        {% if row.userStatus|int == 1 %}
+                        {% if row.userStatus %}
                             Activated
                         {% else %}
                             Deactivated
