--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -4,57 +4,54 @@
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
-        <div style="display: flex; flex-direction: row; justify-content: space-between;">
-            <div class="form-left">
-                <label>Full Name as per IC</label>
-                <input type="text" name="username" value="{{ admin_name }}" readonly><br>
-                
-                <label>Staff ID</label>
-                <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
+        <div class="profile-frame">
+            <label>Full Name as per IC</label>
+            <input type="text" name="username" value="{{ admin_name }}" readonly><br>
+            
+            <label>Staff ID</label>
+            <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
 
-                <label>Email Address</label>
-                <input type="text" name="email" value="{{ admin_email }}" readonly><br>
+            <label>Email Address</label>
+            <input type="text" name="email" value="{{ admin_email }}" readonly><br>
 
-                <label>Role Based</label>
-                <input type="text" name="role", value="{{ admin_role_text}}" readonly><br>
+            <label>Role Based</label>
+            <input type="text" name="role", value="{{ admin_role_text}}" readonly><br>
 
+            <label>Department</label>
+            <input type="text" name="department", value="{{ admin_department_text}}" readonly><br>
+
+            <label>Contact Number</label>
+            <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>  
+
+            <div class="password-container">
+                <label>Password</label> 
+                <input type="password" name="password1" value="{{ admin_password1_text }}">
+                <button type="button" class="toggle-password-btn">
+                    <i class="fas fa-eye"></i>
+                </button>
+            </div><br>
+
+            <div class="password-container">
+                <label> Confirm Password</label>
+                <input type="password" name="password2" value="{{ admin_password2_text }}">
+                <button type="button" class="toggle-password-btn">
+                    <i class="fas fa-eye"></i>
+                </button>
             </div>
-            <div class="form-right">
-                <label>Department</label>
-                <input type="text" name="department", value="{{ admin_department_text}}" readonly><br>
 
-                <label>Contact Number</label>
-                <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>  
-
-                <div class="password-container">
-                    <label>Password</label> 
-                    <input type="password" name="password1" value="{{ admin_password1_text }}">
-                    <button type="button" class="toggle-password-btn">
-                        <i class="fas fa-eye"></i>
-                    </button>
-                </div><br>
-
-                <div class="password-container">
-                    <label> Confirm Password</label>
-                    <input type="password" name="password2" value="{{ admin_password2_text }}">
-                    <button type="button" class="toggle-password-btn">
-                        <i class="fas fa-eye"></i>
-                    </button>
-                </div>
-            </div>
+            <br><br>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            <br>
         </div>
         
-        <br><br>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-        <br>
         <div class="button-wrapper">
                 <button type="submit">Submit</button>
         </div>
