--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -306,11 +306,10 @@ label {
 }
 
 input, select {
+    width: 25vh;
     padding: 10px;
     margin: 1% 0;
     box-sizing: border-box;
-    font-size: medium;
-
 }
 
 
