--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -4,7 +4,7 @@
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
-        <div style="display: flex; flex-direction: row; justify-content: space-evenly;">
+        <div style="display: flex; flex-direction: row; justify-content: space-around;">
             <div class="form-left">
                 <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ admin_name }}" readonly><br>
@@ -42,10 +42,8 @@
                     </button>
                 </div>
             </div>
-            
         </div>
         
-        <br><br>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
