--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -14,7 +14,7 @@
         <br>
         <h1>Register</h1>
         <br>
-            <div style="display: flex; flex-direction: row; justify-content: space-between;">
+            <div style="display: flex; flex-direction: row; justify-content: space-between; padding: 3%;">
                 <div class="form-left">
                 <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ name_text }}"><br>
