--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -278,15 +278,14 @@ html, body {
 
 
 
-
-
-
-
 form {
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
+
 
 .form-left, .form-right {
     width: 40%;
